--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/lodash": "^4.14.77",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
+    "emailjs": "^1.0.12",
     "express": "^4.16.2",
     "rethinkdb": "^2.3.3",
     "rxjs": "^5.4.2",
