--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "pdfmake": "^0.1.33",
     "rethinkdb": "^2.3.3",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
