--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "ng build && node server.js",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build-i18n:el": "ng build --output-path=dist/el --aot --bh /el/ --i18n-file=src/i18n/messages.el.xlf --i18n-format=xlf --locale=el",
+    "build-i18n:en": "ng build --output-path=dist/en --aot --bh /en/ --i18n-file=src/i18n/messages.en.xlf --i18n-format=xlf --locale=en",
+    "build-i18n": "npm run build-i18n:en && npm run build-i18n:el"
   },
   "private": true,
   "dependencies": {
