Refactor node code. Added JWT functionality.

--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@types/lodash": "^4.14.77",
+    "angular2-jwt": "^0.2.3",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
     "emailjs": "^1.0.12",
     "express": "^4.16.2",
+    "jwt-simple": "^0.5.1",
     "pdfmake": "^0.1.33",
     "rethinkdb": "^2.3.3",
     "rxjs": "^5.4.2",
