--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/lodash": "^4.14.77",
     "angular2-jwt": "^0.2.3",
     "body-parser": "^1.18.2",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "emailjs": "^1.0.12",
     "express": "^4.16.2",
